working on the home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Beacon futsal</title>
 </head>
 
-<body>
+<body style="background-color: #f5f2f2;">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
