--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body style="background-color: #f5f2f2;">
   <div id="root"></div>
+  <div id="portal"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
