--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   <title>Footy Time</title>
 </head>
 
-<body style="background-color: #f5f2f2;">
+<body class="" style="background-color: #f5f2f2;">
   <div id="root"></div>
   <div id="portal"></div>
   <script type="module" src="/src/main.tsx"></script>
